# api-converter

./: .gitignore  Cargo.toml  Dockerfile  README.md  Shuttle.toml
file_converter/: Cargo.toml
file_converter/src/: main.rs
file_converter/src/converters/: csv_to_json.rs  mod.rs
file_converter/src/routes/: convert.rs
src/: main.rs
src/converters/: text_to_md.rs
tests_really/: hello.txt
