[package]
name = "api-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
pulldown-cmark = "0.9"
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.8" 
shuttle-runtime = "0.48.0"

