[package]
name = "api-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5"
serde_derive = "1.0"  # Adicione esta linha para garantir que o derive funcione corretamente
csv = "1.1"
pulldown-cmark = "0.9"
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9" 
shuttle-runtime = "0.48.0"


