[package]
name = "api-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.5"
serde_derive = "1.0"  # Adicione esta linha para garantir que o derive funcione corretamente
csv = "1.1"
pulldown-cmark = "0.9"
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9" 
shuttle-runtime = "0.48.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
futures-util = "0.3"
actix-multipart = "0.4"  # Add this line for multipart support
arrow = "37.0.0" # Para manipular Parquet
parquet = "37.0.0"
avro-rs = "0.13.0" # Para manipular Avro
apache-avro = "0.14"


