[package]
name = "file_converter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["multipart"] }  # Habilita a feature multipart apenas para axum
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
hyper = { version = "1.5.0", features = ["client", "server"] }  # Adicionando as features necessárias

